applis/microservice/kustomize/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique
spec:
  rules:
  - host: boutique.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - boutique.example.com
    secretName: apps-certificate
